--- a/style.css
+++ b/style.css
@@ -140,6 +140,8 @@ form { text-align: left; }
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 100%; /* Faz o conteúdo ocupar toda a largura */
+    padding: 0 30px; /* Adiciona um espaçamento nas laterais */
 }
 
 .app-logo { height: 45px; }
