--- a/components/header.html
+++ b/components/header.html
@@ -2,7 +2,7 @@
 <header class="app-header">
     <div class="container header-content">
         <a href="/dashboard.html">
-            <img src="/images/logo-redonda.svg" alt="Logo Setor de Arte" class="app-logo">
+            <img src="/images/logo-fundo-claro-100x100.png" alt="Logo Setor de Arte" class="app-logo"
         </a>
         <div class="user-menu">
             <span id="user-greeting">Olá!</span>
