--- a/style.css
+++ b/style.css
@@ -977,6 +977,7 @@ a.btn-ver-pedido:hover {
 }
 
 .logo-container a {
+    border: 4px solid #48b4f3;
     display: flex;
     align-items: center;
     justify-content: center;
