--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ form { text-align: left; }
 }
 
 .header-content {
-    background-color: #7893a5;
+    background-color: #48b4f3;
     display: flex;
     justify-content: space-between;
     align-items: center;
