--- a/components/header.html
+++ b/components/header.html
@@ -1,11 +1,8 @@
 <!-- components/header.html -->
 <header class="app-header">
     <div class="container header-content">
-        <div class="logo-container">
-    <a href="/dashboard.html">
-        <img src="/images/logo-fundo-claro-100x100.png" alt="Logo Setor de Arte" class="app-logo">
-    </a>
-</div>
+        <!-- Espaço vazio à esquerda, onde a logo estava -->
+        <div></div> 
         <div class="user-menu">
             <span id="user-greeting">Olá!</span>
             <button id="logout-button">Sair</button>
