--- a/components/header.html
+++ b/components/header.html
@@ -1,8 +1,9 @@
-<!-- components/header.html -->
+<!-- components/header.html - VERSÃO ATUALIZADA SEM A LOGO -->
 <header class="app-header">
-    <div class="container header-content">
-        <!-- Espaço vazio à esquerda, onde a logo estava -->
+    <div class="header-content">
+        <!-- Este div vazio ajuda a empurrar o user-menu para a direita -->
         <div></div> 
+        
         <div class="user-menu">
             <span id="user-greeting">Olá!</span>
             <button id="logout-button">Sair</button>
