--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,4 +1,4 @@
-<!-- components/sidebar.html - VERSÃO ATUALIZADA -->
+<!-- components/sidebar.html - VERSÃO ATUALIZADA E SIMPLIFICADA -->
 <aside class="app-sidebar">
     
     <!-- Seção do Cabeçalho da Sidebar com a Logo -->
@@ -45,8 +45,5 @@
             </li>
         </ul>
     </nav>
-
-    <!-- NOVO ELEMENTO: Este div vai empurrar o conteúdo para cima e preencher o espaço vazio -->
-    <div class="sidebar-spacer"></div>
 
 </aside>
