--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ form { text-align: left; }
 .sidebar-nav a.disabled { 
     color: #97a6b2; 
     cursor: not-allowed; 
-    background: none !important; 
+    background: none !important; }
 
 /* O header não é mais um item do grid, então removemos suas propriedades de grid */
 .app-header {
