--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,4 +1,4 @@
-<!-- components/sidebar.html - VERSÃO ATUALIZADA E SIMPLIFICADA -->
+<!-- components/sidebar.html - VERSÃO ATUALIZADA COM NOVOS MÓDULOS -->
 <aside class="app-sidebar">
     
     <!-- Seção do Cabeçalho da Sidebar com a Logo -->
@@ -18,18 +18,36 @@
                     <span>Dashboard</span>
                 </a>
             </li>
+            <!-- ALTERADO: Nome e Ícone -->
             <li>
                 <a href="/painel.html">
-                    <i class="fas fa-list-alt"></i>
-                    <span>Painel de Pedidos</span>
+                    <i class="fas fa-palette"></i>
+                    <span>Pedidos de Arte</span>
                 </a>
             </li>
+            <!-- NOVO: Link para Impressão -->
+            <li>
+                <a href="/impressao/painel.html">
+                    <i class="fas fa-print"></i>
+                    <span>Impressão</span>
+                </a>
+            </li>
+            <!-- NOVO: Link para Acabamento -->
+            <li>
+                <a href="/acabamento/acabamento.html">
+                    <i class="fas fa-cut"></i>
+                    <span>Acabamento</span>
+                </a>
+            </li>
+            <!-- MANTIDO: Link para Financeiro -->
             <li>
                 <a href="/financeiro.html">
                     <i class="fas fa-dollar-sign"></i>
                     <span>Financeiro</span>
                 </a>
             </li>
+
+            <!-- Links Desativados -->
             <li class="nav-separator"></li>
             <li>
                 <a href="#" class="disabled">
@@ -45,5 +63,4 @@
             </li>
         </ul>
     </nav>
-
 </aside>
