--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -15,7 +15,7 @@
             <li>
                 <a href="/dashboard.html">
                     <i class="fas fa-tachometer-alt"></i>
-                    <span>Dashboard</span>
+                    <span>Início</span>
                 </a>
             </li>
             <!-- ALTERADO: Nome e Ícone -->
